css fixed (left align)

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -182,7 +182,7 @@ header{
     font-weight: 300px;
     margin-bottom: 30px;
     font-family:'Roboto';
-    text-align:justify;
+    text-align:left;
 
 }
 
